--- a/environments/environment.properties
+++ b/environments/environment.properties
@@ -5,3 +5,4 @@ docker.image.postgres=ankane/pgvector
 postman.collections=Maintenance_Resource
 docker.image.wiremock=wiremock/wiremock:3.5.3
 wiremock.api.key=some-api-key-1a2bc3
+java.compat.version=11
