--- a/dotCMS/pom.xml
+++ b/dotCMS/pom.xml
@@ -1776,6 +1776,9 @@
                                     <descriptor>original/docker-descriptor.xml</descriptor>
                                     <targetDir>/maven</targetDir>
                                 </assembly>
+                                <args>
+                                    <SDKMAN_JAVA_VERSION>${runtime.docker.sdkman.java.version}</SDKMAN_JAVA_VERSION>
+                                </args>
                             </build>
                         </dotcms>
                     </imagesMap>
