--- a/.github/workflows/reusable-deployment.yml
+++ b/.github/workflows/reusable-deployment.yml
@@ -91,14 +91,14 @@ jobs:
             # This is a secret that is used to request a dev license from license.dotcms.com
             DEV_REQUEST_TOKEN=${{ secrets.DEV_REQUEST_TOKEN }} 
 
-      # The artifacts are uploaded to Artifactory using the 'deploy-artifact-artifactory' action.
+      # The artifacts are uploaded to Artifactory using the 'deploy-artifact-jfrog' action.
       - name: CLI Deploy
         continue-on-error: true
         id: cli_deploy
-        uses: ./.github/actions/deploy-artifact-artifactory
+        uses: ./.github/actions/deploy-artifact-jfrog
         with:
-          artifactory-repo-username: ${{ secrets.EE_REPO_USERNAME }}
-          artifactory-repo-password: ${{ secrets.EE_REPO_PASSWORD }}
+          artifactory-username: ${{ secrets.EE_REPO_USERNAME }}
+          artifactory-password: ${{ secrets.EE_REPO_PASSWORD }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: CLI Publish
