--- a/core-web/package.json
+++ b/core-web/package.json
@@ -70,6 +70,8 @@
         "@material/mwc-icon-button": "^0.20.0",
         "@material/mwc-menu": "^0.20.0",
         "@ngrx/component-store": "17.0.1",
+        "@ngrx/operators": "^17.2.0",
+        "@ngrx/signals": "^17.2.0",
         "@nx/angular": "18.0.4",
         "@storybook/builder-webpack5": "^8.1.1",
         "@tarekraafat/autocomplete.js": "^10.2.6",
