fix (passwords): added start of line boundary to password validation regex (#23292)

--- a/dotCMS/src/main/resources/portal.properties
+++ b/dotCMS/src/main/resources/portal.properties
@@ -306,7 +306,7 @@
     #
 
     # This pattern ensures that passwords must have at least 6 characters and no white spaces.
-    passwords.regexptoolkit.pattern=/[!#%+1234567890:=?@ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz]{8,}\\Z/
+    passwords.regexptoolkit.pattern=/^[!#%+1234567890:=?@ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz]{8,}$/
 
     # This pattern ensures that passwords must have between 6 and 20 valid
     # characters:
