--- a/tools/dotcms-cli/pom.xml
+++ b/tools/dotcms-cli/pom.xml
@@ -22,7 +22,7 @@
     <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
     <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
     <quarkus.platform.version>2.16.12.Final</quarkus.platform.version>
-    <jreleaser-plugin.version>1.8.0</jreleaser-plugin.version>
+    <jreleaser-plugin.version>1.12.0</jreleaser-plugin.version>
     <google.findbugs.version>3.0.2</google.findbugs.version>
   </properties>
 
@@ -52,6 +52,14 @@
               <gitRootSearch>true</gitRootSearch>
               <configFile>${project.basedir}/jreleaser.yml</configFile>
             </configuration>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>full-release</goal>
+                </goals>
+                <phase>validate</phase>
+              </execution>
+            </executions>
           </plugin>
         </plugins>
       </build>
