feat(edit-content) show and navigate categories #28831

--- a/dotCMS/src/main/webapp/WEB-INF/messages/Language.properties
+++ b/dotCMS/src/main/webapp/WEB-INF/messages/Language.properties
@@ -5740,5 +5740,5 @@ edit.content.layout.no.content.to.show = No content to show.
 content.type.form.banner.message= Enable <b>Edit Content Beta</b> for a fresh editing experience (roll back anytime).
 
 edit.content.category-field.show-categories-dialog=Select
-edit.content.category-field.cancel=Cancel
-edit.content.category-field.apply=Apply
+edit.content.category-field.sidebar.header.select-categories=Select categories
+edit.content.category-field.sidebar.button.clear-all=Clear all
