New devs Gavriella and Valentino slack mappings

--- a/.github/data/slack-mappings.json
+++ b/.github/data/slack-mappings.json
@@ -159,5 +159,13 @@
   {
     "github_user": "Millertaker",
     "slack_id": "U075E9Y204B"
+  },
+  {
+    "github_user": "gavriella-dotcms",
+    "slack_id": "U078HRUFR8C"
+  },
+  {
+    "github_user": "valentinogiardino",
+    "slack_id": "U0790HFL64R"
   }
 ]
