#28689 include in 23.10.24 LTS

--- a/dotCMS/src/main/resources/osgi/system/osgi-extra.conf
+++ b/dotCMS/src/main/resources/osgi/system/osgi-extra.conf
@@ -577,7 +577,13 @@ com.dotmarketing.business.cache.provider.timedcache,
 com.dotmarketing.portlets.calendar.model,
 com.fasterxml.jackson.annotation,
 com.fasterxml.jackson.core,
+com.fasterxml.jackson.databind,
 com.fasterxml.jackson.databind.json,
+com.fasterxml.jackson.jaxrs.json.annotation,
+io.swagger.v3.oas.annotations,
+io.swagger.v3.oas.annotations.media,
+io.swagger.v3.oas.annotations.responses,
+org.postgresql.util,
 org.osgi.framework,
 org.osgi.framework.wiring,
 org.osgi.service.packageadmin,
