--- a/dotCMS/src/main/webapp/WEB-INF/messages/Language.properties
+++ b/dotCMS/src/main/webapp/WEB-INF/messages/Language.properties
@@ -701,6 +701,7 @@ com.dotcms.repackage.javax.portlet.title.api_playground=API Playground
 com.dotcms.repackage.javax.portlet.title.pages=Pages
 com.dotcms.repackage.javax.portlet.title.landing-pages=Landing Pages
 com.dotcms.repackage.javax.portlet.title.dotai=dotAI
+com.dotcms.repackage.javax.portlet.title.locales=Locales
 com.dotcms.repackage.javax.app.title.edit-ema=Edit Mode Anywhere
 com.dotmarketing.business.UserAPI.delete.beginning=Deletion of user {0}: Started replacing user references in {1}.
 com.dotmarketing.business.UserAPI.delete.end=Deletion of user {0}: Finished replacing user references in {1}.
