--- a/examples/angular/tsconfig.json
+++ b/examples/angular/tsconfig.json
@@ -19,7 +19,11 @@
     "target": "ES2022",
     "module": "ES2022",
     "useDefineForClassFields": false,
-    "lib": ["ES2022", "dom"]
+    "lib": ["ES2022", "dom"],
+    "paths": {
+      "@dotcms/angular": ["../../core-web/dist/libs/sdk/angular"],
+      "@dotcms/client": ["../../core-web/dist/libs/sdk/client"]
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
