--- a/tools/dotcms-cli/cli/src/main/resources/resources-config.json
+++ b/tools/dotcms-cli/cli/src/main/resources/resources-config.json
@@ -10,7 +10,7 @@
       "pattern": ".*\\.dll$"
     },
     {
-      "pattern": ".*\\.properties$"
+      "pattern": "(.*\\/)?build\\.properties$"
     }
   ]
 }
