fix(core-web) changes

--- a/core-web/package.json
+++ b/core-web/package.json
@@ -115,9 +115,9 @@
         "ng2-dragula": "5.0.1",
         "ngx-markdown": "17.1.1",
         "node-fetch": "^2.6.1",
-        "primeflex": "^3.3.0",
-        "primeicons": "^6.0.1",
-        "primeng": "15.4.13-lts",
+        "primeflex": "^3.3.1",
+        "primeicons": "^7.0.0",
+        "primeng": "17.18.1",
         "prosemirror-model": "^1.16.1",
         "prosemirror-view": "^1.23.12",
         "react": "^18.2.0",
