--- a/dotcms-postman/config.json
+++ b/dotcms-postman/config.json
@@ -43,5 +43,35 @@
     {
         "name": "workflow",
         "collections": ["Workflow_Resource_Tests"]
+    },
+    {
+        "name": "default-split",
+        "collections": [
+            "ApiToken_Resource.postman_collection",
+            "Manifest_Download_End_Point.postman_collection",
+            "Osgi.postman_collection",
+            "Page_Version_with_different_Templates.postman_collection",
+            "Permission_Resource.postman_collection",
+            "Promote_Variant.postman_collection",
+            "Relationship_cache_in_push_publish.postman_collection",
+            "ResourceLink.postman_collection",
+            "RoleResource.postman_collection",
+            "Scripting_Resource.postman_collection",
+            "Site_Resource.postman_collection",
+            "System.postman_collection",
+            "SystemTable.postman_collection",
+            "Tags_Resource_V2.postman_collection",
+            "TempAPI.postman_collection",
+            "ThemeResource.postman_collection",
+            "ToolGroupResource.postman_collection",
+            "UIComponents.postman_collection",
+            "UserResource.postman_collection",
+            "User_Include_Into_Experiment.postman_collection",
+            "VelocityMacro.postman_collection",
+            "VelocitySecrets.postman_collection",
+            "VersionableResource.postman_collection",
+            "Visitor.postman_collection",
+            "WebAssets.postman_collection"
+        ]
     }
 ]
