--- a/core-web/package.json
+++ b/core-web/package.json
@@ -255,7 +255,7 @@
         "postcss-import": "14.1.0",
         "postcss-preset-env": "7.5.0",
         "postcss-url": "10.1.3",
-        "prettier": "^3.3.1",
+        "prettier": "3.3.2",
         "protractor": "~7.0.0",
         "puppeteer": "~5.3.1",
         "react-test-renderer": "^18.2.0",
