implementation (Locale-variables): initial placeholder route

--- a/dotCMS/src/main/webapp/WEB-INF/messages/Language.properties
+++ b/dotCMS/src/main/webapp/WEB-INF/messages/Language.properties
@@ -5715,6 +5715,7 @@ locale.id.hint=Locales should generally be concise. Many sites use ISO codes, su
 locale.language.id=Language Id
 locale.custom.waring=The ability to add Custom Locales may become deprecated in the near future.
 locale.error.message=Locale ID already exists.
+locale.key=Locale Key
 
 editpage.language-change-missing-lang-populate.confirm.header=Create New Language Version?
 editpage.language-change-missing-lang-populate.confirm.message=Page does not exist in the selected language. Create a new version in {0}?
