--- a/core-web/libs/edit-content/project.json
+++ b/core-web/libs/edit-content/project.json
@@ -9,7 +9,8 @@
             "executor": "@nx/jest:jest",
             "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
             "options": {
-                "jestConfig": "libs/edit-content/jest.config.ts"
+                "jestConfig": "libs/edit-content/jest.config.ts",
+                "verbose": true
             }
         },
         "lint": {
