chore(ui): working on unit tests

--- a/core-web/libs/edit-content/project.json
+++ b/core-web/libs/edit-content/project.json
@@ -10,7 +10,7 @@
             "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
             "options": {
                 "jestConfig": "libs/edit-content/jest.config.ts",
-                "verbose": true
+                "verbose": false
             }
         },
         "lint": {
