--- a/.github/workflows/frontend-notify.yml
+++ b/.github/workflows/frontend-notify.yml
@@ -3,11 +3,10 @@ name: 'Notification for Frontend'
 on:
   workflow_call:
     inputs:
-      actions:
-        description: 'Actions to perform'
-        type: string
+      edit_type:
+        description: 'Type of edition, whether it''s BODY or LABEL'
         required: true
-        default: '[]'
+        type: string
     secrets:
       CI_MACHINE_USER:
         description: 'CI machine user'
@@ -18,23 +17,107 @@ on:
       SLACK_BOT_TOKEN:
         description: 'Slack bot token'
         required: true
-env:
-  GH_TOKEN: ${{ github.token }}
-
 jobs:
   resolve-data:
     runs-on: ubuntu-20.04
     outputs:
       issue_number: ${{ steps.evaluate-actions.outputs.issue_number }}
     steps:
-      - name: Show detected actions
-        run: echo "${{ inputs.actions }}"
+      - name: Check if Technology body changed
+        id: body-technology-check
+        if: github.event.action == 'edited' && inputs.edit_type == 'BODY'
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const words = ['frontend', 'front-end'];
+            const issue = context.payload.issue;
+            const changes = context.payload.changes;
+            
+            function extractTechnologyField(body) {
+              const technologyLabel = 'Technology:';
+              const lines = body.split('\\n');
+            
+              for (const line of lines) {
+                if (line.toLowerCase().startsWith(technologyLabel.toLowerCase())) {
+                  return line.replace(technologyLabel, '').trim();
+                }
+              }
+            
+              return null;
+            }
+            
+            const actions = [];
+            if (changes && changes.body && issue.body) {
+              const oldBody = changes.body.from;
+              const newBody = issue.body;
+              console.log(`Old Body: [${oldBody}]`);
+              console.log(`New Body: [${newBody}]`);
+            
+              const oldTechnology = extractTechnologyField(oldBody);
+              const newTechnology = extractTechnologyField(newBody);
+            
+              console.log(`Old Technology: [${oldTechnology}]`);
+              console.log(`New Technology: [${newTechnology}]`);
+            
+              if (oldTechnology !== newTechnology
+                  && words.some(word => word.toLowerCase() === newTechnology.toLowerCase())) {
+                actions.push({
+                  action: 'FRONTEND_TECHNOLOGY_NOTIFY',
+                  issue_number: issue.number
+                });
+                console.log(`Technology field changed from [${oldTechnology}] to [${newTechnology}]`);
+              } else {
+                console.log('Technology field did not change');
+              }
+            } else {
+              console.log('No changes detected in the Technology field');
+            }
+            
+            core.setOutput('actions', JSON.stringify(actions));
+
+      - name: Check if Technology label changed
+        id: label-technology-check
+        if: github.event.action == 'labeled' && inputs.edit_type == 'LABEL'
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const issue = context.payload.issue;
+            const label = context.payload.label;
+            const technologyLabels = ['frontend', 'front-end'];
+            
+            const actions = [];
+            if (label && issue.labels.some(l => l.name === label.name) && technologyLabels.includes(label.name.toLowerCase())) {
+              actions.push({
+                action: 'FRONTEND_TECHNOLOGY_NOTIFY',
+                issue_number: issue.number
+              });
+              console.log(`Technology label [${label.name}] added to issue [${issue.number}]`);
+            } else {
+              console.log('Technology label did not changed');
+            }
+            
+            core.setOutput('actions', JSON.stringify(actions));
+
+      - name: Resolve detected actions
+        id: resolve-actions
+        run: |
+          if [[ '${{ github.event.action == 'edited' || inputs.edit_type == 'BODY' }}' == 'true' ]]; then
+            actions="${{ toJSON(steps.body-technology-check.outputs.actions) }}"
+          elif [[ '${{ github.event.action == 'labeled' || inputs.edit_type == 'LABEL' }}' == 'true' ]]; then
+            actions="${{ toJSON(steps.label-technology-check.outputs.actions) }}"
+          else
+            actions='[]'
+          fi
+
+          echo "actions: ${actions}"
+          echo "actions=${actions}" >> $GITHUB_OUTPUT
 
       - name: Evaluate actions
         id: evaluate-actions
+        shell: bash
         run: |
-          action_json="${{ toJSON(inputs.actions) }}"
-          action_found=$(jq -r '.[] | select(.action == "FRONTEND_TECHNOLOGY_NOTIFY")' <<< ${action_json})
+          actions_json="${{ toJSON(steps.resolve-actions.outputs.actions) }}"
+          action_found=$(jq -r '.[] | select(.action == "FRONTEND_TECHNOLOGY_NOTIFY")' <<< ${actions_json})
           echo "action_found=[${action_found}]"
           [[ -z "${action_found}" || ${action_found} == 'null' ]] && echo 'Action not found' && exit 1
           
