--- a/.github/workflows/post-issue-edited.yml
+++ b/.github/workflows/post-issue-edited.yml
@@ -1,20 +1,15 @@
 name: Post Issue Edited
 on:
   issues:
-    types: [edited]
+    types: [edited, labeled]
 
 jobs:
-  discover-actions:
-    name: Issue Resolve Actions
-    uses: ./.github/workflows/discover-issue-actions.yml
-
   frontend-notify:
-    needs: discover-actions
     name: Issue Resolve Actions
-    if: success() && needs.discover-actions.outputs.actions
+    if: success()
     uses: ./.github/workflows/frontend-notify.yml
     with:
-      actions: ${{ needs.discover-actions.outputs.actions }}
+      edit_type: LABEL
     secrets:
       CI_MACHINE_USER: ${{ secrets.CI_MACHINE_USER }}
       CI_MACHINE_TOKEN: ${{ secrets.CI_MACHINE_TOKEN }}
