--- a/docker/java-base/Dockerfile
+++ b/docker/java-base/Dockerfile
@@ -17,26 +17,9 @@ RUN apt update && \
     apt upgrade -y && \
     apt install -y --no-install-recommends zip unzip wget libtcnative-1 tzdata tini ca-certificates openssl libapr1 libpq-dev
 
-
 # Install curl
 RUN wget -O - https://repo.dotcms.com/artifactory/ext-release-local/com/dotcms/curl-static/curl-`uname -m` | install /dev/stdin /usr/bin/curl && \
-    chmod a+x /usr/bin/curl 
-
-# Downloading sdkman
-#RUN curl -sL "https://get.sdkman.io" | bash
-
-# Installing Java via sdkman 
-    # Modules included
-    # java.naming - javax/naming/NamingException
-    # java.desktop - java/beans/PropertyEditorSupport
-    # java.management - javax/management/MBeanServer
-    # java.security.jgss - org/ietf/jgss/GSSException
-    # java.instrument - java/lang/instrument/IllegalClassFormatException
-    # jdk.unsupported - sun/misc/Unsafe, needed by caffine
-    # java.scripting - Nashhorn, needed by log4j
-    # java.rmi needed by Quartz
-    # jdk.compiler needed to build
-    # jdk.zipfs needed for gradle
+    chmod a+x /usr/bin/curl
 
 RUN jlink \
     --verbose \
@@ -45,7 +28,17 @@ RUN jlink \
     --compress 2 \
     --no-header-files \
     --no-man-pages \
-    --output "$JAVA_OUTPUT_DIR" 
+    --output "$JAVA_OUTPUT_DIR"
+
+# install postgres clients, for pg_dump
+ARG PG_BUILD_PACKAGES="postgresql-common gnupg"
+
+RUN apt install -y --no-install-recommends $PG_BUILD_PACKAGES \
+  && /usr/share/postgresql-common/pgdg/apt.postgresql.org.sh -y \
+  && apt install -y postgresql-client-16 \
+  && apt purge -y $PG_BUILD_PACKAGES
+
+RUN /usr/bin/pg_dump --version || exit 1
     
 # Cleanup
 RUN rm -rf /root/.sdkman && \
