--- a/tools/dotcms-cli/cli/src/main/resources/application.properties
+++ b/tools/dotcms-cli/cli/src/main/resources/application.properties
@@ -12,3 +12,4 @@ dotcms.status.conf.messages.404=Not Found: The requested resource was not found 
 dotcms.status.conf.messages.500=Internal Server Error: An unexpected error occurred on the server.
 dotcms.cli.version=${DOTCMS_CLI_VERSION:${quarkus.application.version}}
 dotcms.cli.name=${DOTCMS_CLI_VERSION:dotCLI}
+quarkus.package.type=uber-jar
