--- a/examples/angular/package.json
+++ b/examples/angular/package.json
@@ -18,11 +18,12 @@
     "@angular/platform-browser": "^17.1.0",
     "@angular/platform-browser-dynamic": "^17.1.0",
     "@angular/router": "^17.1.0",
+    "@dotcms/angular": "0.0.1-alpha.23",
+    "@dotcms/client": "0.0.1-alpha.23",
+    "@tinymce/tinymce-angular": "^8.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.2",
-    "@dotcms/client": "0.0.1-alpha.23",
-    "@dotcms/angular": "0.0.1-alpha.23"
+    "zone.js": "~0.14.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.0.7",
