chore: code cleanup

--- a/.gitignore
+++ b/.gitignore
@@ -167,3 +167,6 @@ dotCMS/settings.gradle
 dotCMS/dependencies.gradle
 
 !/examples/nextjs/.npmrc
+
+# TODO: Remove when we agree on an approach
+dotCMS/src/main/webapp/html/tinymce/**
