--- a/core-web/libs/sdk/angular/package.json
+++ b/core-web/libs/sdk/angular/package.json
@@ -2,15 +2,13 @@
     "name": "@dotcms/angular",
     "version": "0.0.1-alpha.23",
     "peerDependencies": {
-        "@angular/common": "^17.1.0",
-        "@angular/core": "^17.1.0",
-        "@angular/router": "^17.1.0",
+        "@angular/common": "^18.0.6",
+        "@angular/core": "^18.0.6",
+        "@angular/router": "^18.0.6",
         "@dotcms/client": "0.0.1-alpha.23",
-        "rxjs": "^7.8.0"
+        "rxjs": "^7.8.0",
+        "@tinymce/tinymce-angular": "^8.0.0"
     },
-    "whitelistedNonPeerDependencies": [
-        "@tinymce/tinymce-angular"
-    ],
     "description": "Official Angular Components library to render a dotCMS page.",
     "repository": {
         "type": "git",
