--- a/docker/docker-compose-examples/single-node/docker-compose.yml
+++ b/docker/docker-compose-examples/single-node/docker-compose.yml
@@ -34,7 +34,7 @@ services:
       - opensearch-net
 
   dotcms:
-    image: dotcms/dotcms-test:1.0.0-SNAPSHOT
+    image: dotcms/dotcms:latest
     environment:
         CMS_JAVA_OPTS: '-Xmx1g '
         LANG: 'C.UTF-8'
@@ -42,44 +42,31 @@ services:
         DB_BASE_URL: "jdbc:postgresql://db/dotcms"
         DB_USERNAME: 'dotcmsdbuser'
         DB_PASSWORD: 'password'
-        DB_HOST: 'db'
-        DB_LOAD_DUMP_SQL: '/data/dump/dump.sql'
         DOT_ES_AUTH_BASIC_PASSWORD: 'admin'
         DOT_ES_ENDPOINTS: 'https://opensearch:9200'
         DOT_INITIAL_ADMIN_PASSWORD: 'admin'
         DOT_DOTCMS_CLUSTER_ID:  'dotcms-production'
-        DOT_FAVORITE_PAGE_FEATURE_ENABLE: true
-        DOT_FEATURE_FLAG_SEO_IMPROVEMENTS: true
-        DOT_FEATURE_FLAG_SEO_PAGE_TOOLS: true
-        DOT_ANNOUNCEMENTS_BASE_URL: http://localhost:8080
-        DOT_FEATURE_FLAG_ANNOUNCEMENTS: true
-#        DOT_STARTER_DATA_LOAD: '/starter.zip'
-#        CUSTOM_STARTER_URL: https://repo.dotcms.com/artifactory/libs-release-local/com/dotcms/starter/20240611/starter-20240611.zip
+        #CUSTOM_STARTER_URL: 'https://repo.dotcms.com/artifactory/libs-release-local/com/dotcms/starter/20240213/starter-20240213.zip'
     depends_on:
       - opensearch
       - db
     volumes:
       - cms-shared:/data/shared
-      - type: bind
-        source: /Users/dcolina/Downloads/License/dotsecure/license/license.dat
-        target: /data/local/dotsecure/license/license.dat
-      - type: bind
-        source: /tmp/dump.sql
-        target: /data/dump/dump.sql
+      #- {license_local_path}/license.zip:/data/shared/assets/license.zip
     networks:
       - db_net
       - opensearch-net
     ports:
-      - "8080:8080"
+      - "8082:8082"
       - "8443:8443"
 
   db:
     image: postgres:15
     command: postgres -c 'max_connections=400' -c 'shared_buffers=128MB'
     environment:
-      "POSTGRES_USER": 'dotcmsdbuser'
-      "POSTGRES_PASSWORD": 'password'
-      "POSTGRES_DB": 'dotcms'
+        "POSTGRES_USER": 'dotcmsdbuser'
+        "POSTGRES_PASSWORD": 'password'
+        "POSTGRES_DB": 'dotcms'
     volumes:
       - dbdata:/var/lib/postgresql/data
     networks:
