--- a/core-web/libs/sdk/angular/tsconfig.json
+++ b/core-web/libs/sdk/angular/tsconfig.json
@@ -7,10 +7,7 @@
         "noImplicitOverride": true,
         "noPropertyAccessFromIndexSignature": true,
         "noImplicitReturns": true,
-        "noFallthroughCasesInSwitch": true,
-        "paths": {
-            "@dotcms/client": ["../client"]
-        }
+        "noFallthroughCasesInSwitch": true
     },
     "files": [],
     "include": [],
