#28916 Attaching Uber-Jar file as the main project artifact through pom file configuration.

--- a/tools/dotcms-cli/cli/pom.xml
+++ b/tools/dotcms-cli/cli/pom.xml
@@ -146,6 +146,7 @@
                         <configuration>
                             <systemProperties>
                                 <testcontainers.docker.image>${testcontainers.docker.image}</testcontainers.docker.image>
+                                <attachRunnerAsMainArtifact>true</attachRunnerAsMainArtifact>
                             </systemProperties>
                         </configuration>
                     </execution>
