--- a/tools/dotcms-cli/jreleaser.yml
+++ b/tools/dotcms-cli/jreleaser.yml
@@ -47,18 +47,18 @@ distributions:
     active: ALWAYS
     stereotype: CLI
     artifacts:
-      - path: '{{artifactsDir}}/{{artifactsDir}}-osx-aarch_64/dotcms-cli-{{projectVersion}}-runner.jar'
-        platform: 'osx-aarch_64'
-        extraProperties:
-          optional: 'true'
-      - path: '{{artifactsDir}}/{{artifactsDir}}-osx-x86_64/dotcms-cli-{{projectVersion}}-runner.jar'
-        platform: 'osx-x86_64'
-        extraProperties:
-          optional: 'true'
       - path: '{{artifactsDir}}/{{artifactsDir}}-linux-x86_64/dotcms-cli-{{projectVersion}}-runner.jar'
         platform: 'linux-x86_64'
         extraProperties:
           optional: 'true'
+      # - path: '{{artifactsDir}}/{{artifactsDir}}-osx-aarch_64/dotcms-cli-{{projectVersion}}-runner.jar'
+      #   platform: 'osx-aarch_64'
+      #   extraProperties:
+      #     optional: 'true'
+      # - path: '{{artifactsDir}}/{{artifactsDir}}-osx-x86_64/dotcms-cli-{{projectVersion}}-runner.jar'
+      #   platform: 'osx-x86_64'
+      #   extraProperties:
+      #     optional: 'true'
 
   dotcms-cli-native:
     type: BINARY
