feat(edit-content) fix comments #28879

--- a/core-web/.prettierrc
+++ b/core-web/.prettierrc
@@ -6,6 +6,7 @@
     "trailingComma": "none",
     "arrowParens": "always",
     "bracketSameLine": true,
+    "htmlWhitespaceSensitivity": "ignore",
     "overrides": [
         {
             "files": "*.scss",
