chore: Refactor dot-edit-content-category-field.component to use dot-category-field-chips component

--- a/dotCMS/src/main/webapp/WEB-INF/messages/Language.properties
+++ b/dotCMS/src/main/webapp/WEB-INF/messages/Language.properties
@@ -5746,3 +5746,5 @@ content.type.form.banner.message= Enable <b>Edit Content Beta</b> for a fresh ed
 edit.content.category-field.show-categories-dialog=Select
 edit.content.category-field.sidebar.header.select-categories=Select categories
 edit.content.category-field.sidebar.button.clear-all=Clear all
+edit.content.category-field.list.show.more={0} More
+edit.content.category-field.list.show.less=Less
