--- a/.github/workflows/build-test-master.yml
+++ b/.github/workflows/build-test-master.yml
@@ -65,6 +65,7 @@ jobs:
     uses: ./.github/workflows/cli-build-artifacts.yml
     with:
       buildNativeImage: true
+      artifact-run-id: ${{ needs.initialize.outputs.artifact-run-id }}
       branch: ${{ github.ref }}
 
   deployment:
