--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -210,6 +210,15 @@
     </properties>
 
     <build>
+
+        <extensions>
+            <extension>
+                <groupId>io.quarkus.bot</groupId>
+                <artifactId>build-reporter-maven-extension</artifactId>
+                <version>3.1.0</version>
+            </extension>
+        </extensions>
+
         <pluginManagement>
 
             <plugins>
