Refactor workflow for common java and maven build steps (#29137)
This change combines and removes a lot of common functionality and steps
in our workflow process making the whole thing easier to understand and
work with. Our main workflow relies on an initial maven build step that
generates artifacts that can be then pulled in and used in subsequent
test, deploy and release steps. We do this to allow these test stages to
be run in parallel and we can then aggregate the results. To achieve
this we need to use consistent naming conventions for the artefacts and
to provide artefacts and caches that enable the steps to run quickly
without redoing work. There are therefore common steps that we needed to
add to each job and the amount of duplication of these steps causes many
issues to understand or to make consistent changes system-wide. To use
common DRY principles we can pull out these common functionalities into
separate functions (GitHub composite actions) that allow for consistent
behavior.

Part of the push for this are:
1. In moving to Java 21 we want a consistent way to set the Java version
to use by default across the build, whether a major build or a minor
java version without having a mix of versions.
2. Some caches have not been consistently used throughout the build
requiring the config for cache load and save to be the same, and to know
when we should save vs load caches.



### Proposed Changes
* Create setup-java composite action handling all java installation
using sdkman.
   * allow override of java version
   * specify if graalvm is required (for native builds)
* uses default grallvm 21.0.2-graalce, but enables override from a
parameter
* merge separate cleanup-runner actions into a single action that covers
multiple OS
* create prepare-runner composite action handling common tasks for all
runners
   * option to setup master branch reference 
   * option to cleanup runner
   * setup java by default but option to not 
* create maven-job composite action

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -210,6 +210,15 @@
     </properties>
 
     <build>
+
+        <extensions>
+            <extension>
+                <groupId>io.quarkus.bot</groupId>
+                <artifactId>build-reporter-maven-extension</artifactId>
+                <version>3.1.0</version>
+            </extension>
+        </extensions>
+
         <pluginManagement>
 
             <plugins>
@@ -1163,6 +1172,15 @@
     </issueManagement>
 
     <profiles>
+        <profile>
+            <id>prod</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <properties>
+                <!-- Placeholder currently overridden in core-web -->
+            </properties>
+        </profile>
         <profile>
             <id>jprofiler</id>
             <properties>
